Updated the test classes