@@ -3,9 +3,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
     id 'java-library'
+    id 'info.solidsoft.pitest' version '1.9.11'
+
+
 }
 
 group = 'org.example'
+
 version = '1.0-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -19,6 +23,17 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.7'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2' // Add this line
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'junit:junit:4.13.2'
+
+    //implementation 'org.pitest:pitest-junit5-plugin:1.2.3'
+}
+pitest {
+    targetClasses = ['com.example.*'] // Replace with your package name
+    targetTests = ['com.example.*Test'] // Replace with your test classes
+    threads = 4 // Number of threads for mutation testing
+    mutators = ['DEFAULTS'] // Default mutation operators
+    verbose = true // Enable detailed logs
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
 
